# my-raytracer

./: .gitignore  README.md  pyproject.toml
.github/workflows/: ci.yml
.mythings/: ledger.jsonl
.mythings/mycoder-transcripts/: my-raytracer-3-20260718T201738Z.jsonl  my-raytracer-3-20260718T202129Z.jsonl
examples/: cornell_box.json
src/myraytracer/: bvh.py  camera.py  cli.py  denoise.py  geometry.py  image.py  light.py  material.py  png.py  ray.py  render.py  scene.py  sceneio.py  tonemap.py  tracer.py  vec.py
src/myraytracer/core/: __init__.py  backend.py  bsdf.py  camera.py  geometry.py  integrator.py  linalg.py  material.py  mesh.py  optimize.py  ray.py  sampling.py  scene.py  splat.py
src/myraytracer/gpu/: camera.py  dielectric.py  geometry.py  mesh.py  optimize.py  pathtracer.py  ray.py  render.py  scene.py  shading.py  splat.py  vec.py
tests/: test_backends.py  test_bvh.py  test_camera.py  test_cli.py  test_cornell_box.py  test_denoise.py  test_geometry.py  test_image.py  test_png.py  test_ray.py  test_render.py  test_scene.py  test_sceneio.py  test_smoke.py  test_tonemap.py  test_tracer.py  test_vec.py
tests/core/: conftest.py  test_backend.py  test_bsdf.py  test_camera.py  test_dielectric.py  test_geometry.py  test_integrator.py  test_linalg.py  test_mesh.py  test_mis.py  test_optimize.py  test_ray.py  test_scene.py  test_splat.py
tests/gpu/: test_camera.py  test_dielectric.py  test_geometry.py  test_mesh.py  test_optimize.py  test_pathtracer.py  test_ray.py  test_render.py  test_scene.py  test_shading.py  test_splat.py  test_vec.py
