[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "my-raytracer"
version = "0.0.1"
description = "Monte Carlo path tracer (spheres/planes, Lambertian, deterministic)"
authors = [{ name = "Lorenzo Liuzzo", email = "lorenzoliuzzo@outlook.com" }]
readme = "README.md"
license = { text = "MIT" }
requires-python = ">=3.11"
dependencies = ["numpy>=1.26"]

[project.optional-dependencies]
dev = ["pytest>=8", "pytest-cov>=5", "ruff>=0.6", "pre-commit>=3"]
# Separate from `dev`: torch is a heavy wheel, and CI installs a CPU-only
# build explicitly (see ci.yml) before this spec is satisfied, so it never
# refetches the CUDA-bundled default from PyPI.
gpu = ["torch>=2.2"]

[tool.hatch.build.targets.wheel]
packages = ["src/myraytracer"]

[tool.ruff]
line-length = 100
src = ["src", "tests"]

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-q"
markers = ["slow: integration/slow tests, excluded from the fast local loop"]
pythonpath = ["src"]
